Added TOC to index
Created outline/TOC of what discrete math covers in the index.html page.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-<p class="editor-note">My dog is very nice</p>
-
-<!-- Nesting Elements -->
-<p>My cat is <strong>very</strong> grumpy</p>
-<img src="images/x.png" alt="My test image">
+<!DOCTYPE html>
+<html>
+    <head>
+       <meta charset="utf-8" />
+       <meta name="viewport" content="width=device-width" />
+       <title>Discrete Math</title> 
+    </head>
+    <body>
+        <h1>Discrete Math</h1>
+        <h2>Plain & Simple</h2>
+        <img src="images/venn-diagram.png" alt="Discrete Math Symbol"/>
+        <p>Table of Contents</p>
+        <ol>
+            <li>The Language of "Discrete" Math</li>
+            <li>Logical Statements</li>
+            <li>Proof toolkit</li>
+            <li>Recursion</li>
+            <li>Set Theory</li>
+            <li>Counting and Probability</li>
+            <li>Graph and Trees</li>
+            <li>Algorithm Complexity Analysis</li>
+            <li>The Weird Extra Stuff</li>
+        </ol>
+        <p>Best way to learn is by doing.
+            Read more about discrete math from the <a href="https://en.wikipedia.org/wiki/Discrete_mathematics" target="_blank">wikipedia</a> page. 
+        </p>
+    </body>
+</html>
